Jhkim/fix color contrast ratio (#272)
1. Modified background color to fix a color contrast ratio issue
2. Make the key element of the Access Token form accessible

--- a/src/Microsoft.IIS.Administration/wwwroot/css/connect.css
+++ b/src/Microsoft.IIS.Administration/wwwroot/css/connect.css
@@ -18,7 +18,7 @@ h1 {
 }
 
 #connectForm a {
-    color: #0094ff;
+    color: #0077ce;
 }
 
 #connect {
