--- a/src/Microsoft.IIS.Administration/wwwroot/css/explorer.css
+++ b/src/Microsoft.IIS.Administration/wwwroot/css/explorer.css
@@ -130,7 +130,7 @@ b {
 
 .verbs a.selected,
 .verbs a:hover {
-    background-color: #0094ff;
+    background-color: #0077ce;
     color: #fff;
 }
     
